# mano-trio

./: .devcontainer.json  .gitmodules  CMakeLists.txt  README.md  pm_static.yml  prj.conf  sysbuild.conf
boards/arm/nslog/: Kconfig.board  Kconfig.defconfig  board.cmake  nslog.dts  nslog.yaml  nslog_defconfig
boards/nooshee/log/: Kconfig  Kconfig.defconfig  board.c  board.cmake  board.yml  log_nrf52833.dts  log_nrf52833_defconfig
oot/drivers/: CMakeLists.txt  Kconfig
oot/drivers/charger/: CMakeLists.txt  Kconfig
oot/drivers/charger/bq25792/: Kconfig  bq25792.c  bq25792.h
oot/drivers/display/: CMakeLists.txt  Kconfig
oot/drivers/display/ssd1309/: Kconfig  ssd1309.c  ssd1309_regs.h
oot/drivers/led/: CMakeLists.txt  Kconfig
oot/drivers/led/aw21036/: Kconfig  aw21036.c  aw21036.h
oot/drivers/led/aw9109/: Kconfig  aw9109.c
oot/drivers/radio/dw3000/: Kconfig
oot/drivers/sensor/: CMakeLists.txt  Kconfig
oot/drivers/sensor/hx711/: Kconfig
oot/drivers/sensor/mxc6655xa/: Kconfig  mxc6655xa.c  mxc6655xa.h
oot/drivers/sensor/paa5100/: Kconfig  paa5100.c  paa5100.h  (+1 more)
oot/drivers/usb_pd/fusb302/src/: CMakeLists.txt  FSCTypes.h  PDPolicy.c  PDProtocol.c  Port.c  Port.h  TypeC.c  core.c  core.h  fusb30X.c  fusb30X.h  platform.h
oot/drivers/usb_pd/fusb302/src/modules/: CMakeLists.txt  HostComm.c  dpm.c  observer.c  observer.h
oot/drivers/usb_pd/fusb302/src/vdm/: CMakeLists.txt
oot/drivers/usb_pd/fusb302/src/vdm/DisplayPort/: CMakeLists.txt
oot/zephyr/: module.yaml
src/: data.c  data.h  main.c  mano.c  mano.h
sysbuild/: mcuboot.conf  mcuboot.overlay
(+25 files in other folders)
