if(CONFIG_FUSB302)  
    zephyr_library()
    zephyr_include_directories(.)
    zephyr_library_sources(
        core.c
        fusb30X.c
        Log.c
        PDPolicy.c
        PDProtocol.c
        Port.c
        timer.c
        TypeC.c
        vendor_info.c
    )
    add_subdirectory(modules)
    add_subdirectory(vdm)
endif()